# Parle

./: .gitignore  Cargo.toml  README.md
src/: data_reader.rs  main.rs
