[package]
name = "parle"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version="0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy= "0.15.7"
serde = "1.0.204"
serde_json = "1.0.120"
